app/assets/stylesheets/application/cards.css.scss
@import 'application/variables.css.scss';

body#cards {
  #info {
    color: gray;
    text-align: left;
    position: absolute;
    top: 248px;
    left: -480px;
  }

  #info a {
    color: #40CAFC;
  }



  #panaderia {
    position: absolute;
    left: 0;
    top: -260px;
    height: 16px;
    width: 480px;
    text-align: right;
    color: #40CAFC;
  }

  p {
    margin: 0 0 5px 0;
  }

  a {
    text-decoration: none;
//    color: black;
  }




  #central {
    position: absolute;
    width: 10px;
    height: 10px;
    z-index: 24;
    left: 50%;
    top: 50%;
  }

  #playground {
    position: absolute; margin-left: -500px; margin-top: -260px;
    width: 1000px;
    height: 520px;
  }


  #card  {
    text-align: left;
    position: absolute;
    width: 961px;
    height: 482px;
    top: 18px;
    left: 0;
    background-color: white;
    z-index: 200;
  }



  #title {
    position: absolute;
    top: 0;
    left: 240px;
    height: 15px;
    /*	width: 200px;	*/
    border-bottom: 1px solid white;
    z-index: 220;
    padding: 2px 6px 0 6px;
  }

  .card_element {
    position: absolute;
    background-color: white;
    overflow: hidden;
  }

  #properties {
    left: 10px;
    top: 10px;
    width: 190px;
    height: 240px;
    font-size: 10px;
  }

  .prop_name {
    float: left;
    text-align: left;
    padding: 0 5px 0 3px;
  }

  .prop_value {
    color: black;
    padding: 0 3px 0 10px;
  }

  .prop_value p {
    margin: 0;
  }

  .prop_separator {
    clear: both;
    height: 2px;
    background-color: white;
    margin: 0;
    padding: 0;
    font-size: 0pt;
  }

  #files {
    position: absolute;
    left: 0;
    width: 190px;
    height: 30px;
  }


  .card_file img {
    float: left;
    padding: 0 3px 1px 3px;
  }

  .card_file div {
    padding: 2px 0 0 0;
  }

  #main_text {
    left: 212px;
    top: 10px;
    width: 290px;
    height: 240px;
    text-align: left;
  }

  #main_image {
    left: 10px;
    top: 260px;
    width: 510px;
    height: 210px;
  }


  #slides {
    left: 530px;
    top: 10px;
    width: 420px;
    height: 430px;
    text-align: center;
  }

  .slide_text {
    text-align: left;
    font-size: 10px;
    padding: 8px 0 0 0;
  }

  .slide_text a {
    text-decoration: underline;
  }


  #scroll_up {
    cursor: pointer;
    position: absolute;
    left: 496px;
    top: 254px;
    width: 10px;
    height: 6px;
    background: asset-data-url("arrowup.gif") no-repeat;
  }

  #scroll_down {
    cursor: pointer;
    position: absolute;
    left: 496px;
    top: 262px;
    width: 10px;
    height: 6px;
    background: asset-data-url("arrowdown.gif") no-repeat;
  }

  #slide_controls {
    text-align: center;
    left: 530px;
    top: 450px;
    width: 420px;
    height: 20px;
    color: gray;
  }

  #slide_controls {
    .arrow {overflow: hidden; height: 10px; width: 6px; text-indent: -100px;}
  }

  #slide_controls a {
    color: black;
  }

  a.selected {
    font-weight: bold;
  }
}

